--- a/frontend/index.html
+++ b/frontend/index.html
@@ -34,8 +34,12 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"
     />
+    <script>
+      var myCharacter = "";
+    </script>
     <script src="./assets/apis.js" defer></script>
     <script src="./assets/map.js" defer></script>
+    <script src="./assets/overlay.js" defer></script>
     <script src="./assets/script.js" defer></script>
   </head>
   <body class="relative">
@@ -74,6 +78,28 @@
         </button>
       </div>
       <div id="content-stones-popup" class="space-y-4 my-2 p-4"></div>
+    </div>
+    <div
+      id="avengers-popup"
+      class="max-h-[90vh] z-[10001] overflow-auto hidden absolute m-1 lg:m-3 md:min-w-[400px] max-w-[1200px] top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 bg-white shadow-lg rounded-md p-2"
+    >
+      <div
+        class="p-2 -m-2 flex justify-between items-center bg-slate-900 text-white rounded-t-md"
+      >
+        <div class="text-bg">Choose your character.</div>
+        <button type="button">
+          <span
+            class="material-symbols-outlined text-base close-btn"
+            id="close-avengers-popup"
+          >
+            close
+          </span>
+        </button>
+      </div>
+      <div
+        id="content-avengers-popup"
+        class="flex gap-4 justify-between items-center my-2 p-4"
+      ></div>
     </div>
   </body>
 </html>
