--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"
     />
+    <script src="https://cdn.jsdelivr.net/npm/leaflet-rotatedmarker@0.2.0/leaflet.rotatedMarker.min.js"></script>
     <script>
       var myCharacter = "";
     </script>
@@ -45,15 +46,18 @@
   <body class="relative">
     <div id="map" class="h-screen"></div>
     <div
-      class="z-[1000] flex flex-col gap-2 absolute p-2 top-1/2 translate-y-1/2 bg-slate-200 rounded-md shadow-md right-7 [&>*]:bg-slate-100 [&>*]:grid [&>*]:items-center [&>*]:p-1 [&>*]:rounded-sm"
+      class="z-[1000] flex flex-col gap-2 absolute p-2 top-1/2 translate-y-1/2 bg-slate-900 rounded-md shadow-md right-7 [&>*]:bg-slate-100 [&>*]:grid [&>*]:items-center [&>*]:p-1 [&>*]:rounded-sm"
     >
-      <button id="locate-me">
+      <button id="locate">
         <span class="material-symbols-outlined text-bg"> my_location </span>
       </button>
       <button id="move-thanos" class="!bg-red-500">
         <span class="material-symbols-outlined text-bg text-white">
           move_location
         </span>
+      </button>
+      <button id="attack-thanos" class="">
+        <span class="material-symbols-outlined"> rocket_launch </span>
       </button>
     </div>
     <div
@@ -62,7 +66,7 @@
     ></div>
     <div
       id="stones-popup"
-      class="max-h-[90vh] z-[10001] overflow-auto hidden absolute m-1 lg:m-3 md:min-w-[400px] max-w-[700px] top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 bg-white shadow-lg rounded-md p-2"
+      class="max-h-[90vh] w-[90vw] z-[10001] overflow-auto hidden absolute m-1 lg:m-3 md:min-w-[400px] max-w-[700px] top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 bg-white shadow-lg rounded-md p-2"
     >
       <div
         class="p-2 -m-2 flex justify-between items-center bg-slate-900 text-white rounded-t-md"
@@ -81,7 +85,7 @@
     </div>
     <div
       id="avengers-popup"
-      class="max-h-[90vh] z-[10001] overflow-auto hidden absolute m-1 lg:m-3 md:min-w-[400px] max-w-[1200px] top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 bg-white shadow-lg rounded-md p-2"
+      class="max-h-[90vh] z-[10001] w-[90vw] overflow-auto hidden absolute m-1 lg:m-3 md:min-w-[400px] max-w-[1200px] top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 bg-white shadow-lg rounded-md p-2"
     >
       <div
         class="p-2 -m-2 flex justify-between items-center bg-slate-900 text-white rounded-t-md"
@@ -98,7 +102,29 @@
       </div>
       <div
         id="content-avengers-popup"
-        class="flex gap-4 justify-between items-center my-2 p-4"
+        class="flex flex-wrap gap-4 justify-between items-center my-2 p-4"
+      ></div>
+    </div>
+    <div
+      id="focus-popup"
+      class="max-h-[90vh] w-[90vw] z-[10001] overflow-auto hidden absolute m-1 lg:m-3 md:min-w-[400px] max-w-[1200px] top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 bg-white shadow-lg rounded-md p-2"
+    >
+      <div
+        class="p-2 -m-2 flex justify-between items-center bg-slate-900 text-white rounded-t-md"
+      >
+        <div class="text-bg">Locate</div>
+        <button type="button">
+          <span
+            class="material-symbols-outlined text-base close-btn"
+            id="close-focus-popup"
+          >
+            close
+          </span>
+        </button>
+      </div>
+      <div
+        id="content-focus-popup"
+        class="flex flex-wrap gap-4 justify-between items-center my-2 p-4"
       ></div>
     </div>
   </body>
